--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@ body{
   text-align:center;
 }
 
-/* HEADER */
 header{
   padding:35px 15px;
 }
 
-/* LOGO ANIMADO */
+/* LOGO */
 .logo{
   width:190px;
   margin-bottom:10px;
@@ -54,17 +53,24 @@ h1{
   margin:30px auto;
   background:#111;
   border-radius:22px;
-  padding:25px 15px;
+  padding:20px;
   width:90%;
   max-width:420px;
   box-shadow:0 0 30px rgba(0,0,0,.8);
 }
 
 .player-box h2{
-  margin:0 0 12px;
+  margin-bottom:12px;
   color:#ffcc00;
   font-size:18px;
-  letter-spacing:1px;
+}
+
+/* iframe */
+.player-box iframe{
+  width:100%;
+  height:160px;
+  border:none;
+  border-radius:15px;
 }
 
 /* BOTONES */
@@ -89,7 +95,6 @@ h1{
   transform:scale(1.06);
 }
 
-/* FOOTER */
 footer{
   margin-top:30px;
   padding:15px;
@@ -111,12 +116,14 @@ footer{
   <div class="slogan">SUENA DIFERENTE</div>
 </header>
 
-<!-- PLAYER FUNCIONAL -->
+<!-- PLAYER QUE SÍ FUNCIONA -->
 <div class="player-box">
   <h2>🔴 EN VIVO</h2>
 
-  <!-- PLAYER OFICIAL MyRadioStream -->
-  <script src="//myradiostream.com/embed/Anghelo"></script>
+  <iframe 
+    src="https://myradiostream.com/embed/Anghelo"
+    allow="autoplay">
+  </iframe>
 
 </div>
 
