--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ header{
   margin-bottom:10px;
   filter:
     drop-shadow(0 0 4px #fff)
-    drop-shadow(0 0 10px #ffcc00)
-    drop-shadow(0 0 22px rgba(255,204,0,.9));
+    drop-shadow(0 0 12px #ffcc00)
+    drop-shadow(0 0 24px rgba(255,204,0,.9));
   animation:floatLogo 3.5s ease-in-out infinite;
 }
 
@@ -52,15 +52,15 @@ h1{
 .player-box{
   margin:30px auto;
   background:#111;
-  border-radius:22px;
+  border-radius:25px;
   padding:20px;
   width:90%;
   max-width:420px;
-  box-shadow:0 0 30px rgba(0,0,0,.8);
+  box-shadow:0 0 35px rgba(0,0,0,.8);
 }
 
 .player-box h2{
-  margin-bottom:12px;
+  margin-bottom:15px;
   color:#ffcc00;
   font-size:18px;
 }
@@ -68,9 +68,16 @@ h1{
 /* iframe */
 .player-box iframe{
   width:100%;
-  height:160px;
+  height:180px;
   border:none;
-  border-radius:15px;
+  border-radius:18px;
+}
+
+/* TEXTO AYUDA */
+.help{
+  margin-top:10px;
+  font-size:13px;
+  color:#ccc;
 }
 
 /* BOTONES */
@@ -116,15 +123,16 @@ footer{
   <div class="slogan">SUENA DIFERENTE</div>
 </header>
 
-<!-- PLAYER QUE SÍ FUNCIONA -->
+<!-- PLAYER QUE FUNCIONA -->
 <div class="player-box">
-  <h2>🔴 EN VIVO</h2>
+  <h2>🔴 ESCUCHA EN VIVO</h2>
 
   <iframe 
-    src="https://myradiostream.com/embed/Anghelo"
+    src="http://anghelo.on-air.fm/free/"
     allow="autoplay">
   </iframe>
 
+  <div class="help">▶ Presiona PLAY y disfruta la radio en vivo</div>
 </div>
 
 <div class="buttons">
