--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@ header{
   padding:35px 15px;
 }
 
-/* LOGO */
 .logo{
   width:190px;
   margin-bottom:10px;
@@ -37,23 +36,14 @@ header{
   100%{transform:translateY(0)}
 }
 
-h1{
-  margin:5px 0 0;
-  font-size:26px;
-}
+h1{margin:5px 0;font-size:26px;}
+.slogan{color:#ffcc00;letter-spacing:2px;font-size:14px;}
 
-.slogan{
-  color:#ffcc00;
-  letter-spacing:2px;
-  font-size:14px;
-}
-
-/* PLAYER */
 .player-box{
   margin:30px auto;
   background:#111;
   border-radius:25px;
-  padding:20px;
+  padding:25px 15px;
   width:90%;
   max-width:420px;
   box-shadow:0 0 35px rgba(0,0,0,.8);
@@ -65,22 +55,18 @@ h1{
   font-size:18px;
 }
 
-/* iframe */
-.player-box iframe{
+audio{
   width:100%;
-  height:180px;
-  border:none;
-  border-radius:18px;
+  outline:none;
+  border-radius:20px;
 }
 
-/* TEXTO AYUDA */
 .help{
   margin-top:10px;
   font-size:13px;
   color:#ccc;
 }
 
-/* BOTONES */
 .buttons{
   margin:25px 0;
 }
@@ -114,25 +100,24 @@ footer{
 <body>
 
 <header>
-  <img
-    src="https://user1472.na.imgto.link/public/20260117/la-n-removebg-preview.avif"
-    alt="Radio La N 96.3 FM"
-    class="logo">
+  <img src="https://user1472.na.imgto.link/public/20260117/la-n-removebg-preview.avif"
+       alt="Radio La N 96.3 FM"
+       class="logo">
 
   <h1>Radio La N 96.3 FM</h1>
   <div class="slogan">SUENA DIFERENTE</div>
 </header>
 
-<!-- PLAYER QUE FUNCIONA -->
 <div class="player-box">
   <h2>🔴 ESCUCHA EN VIVO</h2>
 
-  <iframe 
-    src="http://anghelo.on-air.fm/free/"
-    allow="autoplay">
-  </iframe>
+  <!-- PLAYER REAL -->
+  <audio controls>
+    <source src="http://anghelo.on-air.fm/stream" type="audio/mpeg">
+    Tu navegador no soporta audio en vivo
+  </audio>
 
-  <div class="help">▶ Presiona PLAY y disfruta la radio en vivo</div>
+  <div class="help">▶ Presiona PLAY para escuchar la radio en vivo</div>
 </div>
 
 <div class="buttons">
