--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ footer{
 
   <!-- PLAYER REAL -->
   <audio controls>
-    <source src="http://anghelo.on-air.fm/stream" type="audio/mpeg">
+    <source src="http://anghelo.on-air.fm:stream" type="audio/mpeg">
     Tu navegador no soporta audio en vivo
   </audio>
 
