--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ footer{
 <!-- PLAYER EN VIVO -->
 <div class="player-box">
   <audio controls autoplay>
-    <source src="https://78.129.241.110/17951/stream" type="audio/mpeg">
+    <source src="https://link.zeno.fm:80/jfjyk4dnuc1vv/stream" type="audio/mpeg">
     Tu navegador no soporta audio en vivo.
   </audio>
 </div>
