--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ footer{
 <!-- PLAYER EN VIVO -->
 <div class="player-box">
   <audio controls autoplay>
-    <source src="https://link.zeno.fm/80/jfjyk4dnuc1vv" type="audio/mpeg">
+    <source src="https://stream.zeno.fm/jfjyk4dnuc1vv" type="audio/mpeg">
     Tu navegador no soporta audio en vivo.
   </audio>
 </div>
