--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@ header{
   padding:40px 15px 20px;
 }
 
-/* LOGO */
 .logo{
   width:190px;
   margin-bottom:12px;
@@ -49,7 +48,6 @@ h1{
   margin-bottom:25px;
 }
 
-/* PLAYER */
 .player-box{
   margin:35px auto;
 }
@@ -62,7 +60,6 @@ audio{
   box-shadow:0 0 25px rgba(255,204,0,.7);
 }
 
-/* BOTONES */
 .buttons{
   margin:30px 0;
 }
@@ -85,7 +82,6 @@ audio{
   color:#000;
 }
 
-/* FOOTER */
 footer{
   margin-top:35px;
   padding:15px;
@@ -107,15 +103,13 @@ footer{
   <div class="slogan">SUENA DIFERENTE</div>
 </header>
 
-<!-- PLAYER EN VIVO -->
 <div class="player-box">
-  <audio controls autoplay>
+  <audio id="radioPlayer" controls preload="none">
     <source src="https://stream.zeno.fm/jfjyk4dnuc1vv" type="audio/mpeg">
     Tu navegador no soporta audio en vivo.
   </audio>
 </div>
 
-<!-- BOTONES -->
 <div class="buttons">
   <a href="#">📘 Facebook</a>
   <a href="https://wa.me/51999999999">📞 WhatsApp</a>
@@ -124,6 +118,23 @@ footer{
 <footer>
   © 2026 Radio La N 96.3 FM · Diseño web: Marcony Clavijo
 </footer>
+
+<script>
+const player = document.getElementById("radioPlayer");
+const streamURL = "https://stream.zeno.fm/jfjyk4dnuc1vv";
+
+player.addEventListener("play", function () {
+  if (!player.dataset.live) {
+    player.dataset.live = "true";
+    return;
+  }
+
+  player.pause();
+  player.src = streamURL + "?nocache=" + Date.now();
+  player.load();
+  player.play();
+});
+</script>
 
 </body>
 </html>
